--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,13 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
     <activity
+      android:label="@string/title_activity_action"
+      android:name=".ActionActivity"
+      android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+    <activity
       android:label="@string/app_name"
-      android:name=".MainActivity"
+      android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
