--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
   <application
     android:allowBackup="true"
+    android:name=".DominionApplication"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:roundIcon="@mipmap/ic_launcher_round"
@@ -18,11 +19,11 @@
       android:label="@string/app_name"
       android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+<!--      <intent-filter>-->
+<!--        <action android:name="android.intent.action.MAIN"/>-->
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+<!--        <category android:name="android.intent.category.LAUNCHER"/>-->
+<!--      </intent-filter>-->
     </activity>
     <activity android:name=".controller.LoginActivity">
       <intent-filter>
