--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,33 +4,20 @@
 
   <application
     android:allowBackup="true"
-    android:name=".DominionApplication"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:name=".DominionApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity
-      android:label="@string/title_activity_action"
-      android:name=".ActionActivity"
-      android:theme="@style/AppTheme.NoActionBar">
-    </activity>
-    <activity
-      android:label="@string/app_name"
-      android:name=".controller.MainActivity"
-      android:theme="@style/AppTheme.NoActionBar">
-<!--      <intent-filter>-->
-<!--        <action android:name="android.intent.action.MAIN"/>-->
-
-<!--        <category android:name="android.intent.category.LAUNCHER"/>-->
-<!--      </intent-filter>-->
+    <activity android:name=".controller.MainActivity">
     </activity>
     <activity android:name=".controller.LoginActivity">
       <intent-filter>
-           <action android:name="android.intent.action.MAIN"/>
+        <action android:name="android.intent.action.MAIN"/>
 
-           <category android:name="android.intent.category.LAUNCHER"/>
-         </intent-filter>
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
     </activity>
   </application>
 
