--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="edu.cnm.deepdive.dominionandroid">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
@@ -12,20 +10,27 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".controller.MainActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+    <activity android:name=".controller.GoogleSignInActivity">
+    <intent-filter>
+      <action android:name="android.intent.action.MAIN"/>
 
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
+      <category android:name="android.intent.category.LAUNCHER"/>
+    </intent-filter>
+    </activity>
+    <activity android:name=".controller.MainActivity">
+
     </activity>
     <activity android:name=".controller.LoginActivity">
-<!--      <intent-filter>-->
-<!--        <action android:name="android.intent.action.MAIN"/>-->
 
-<!--        <category android:name="android.intent.category.LAUNCHER"/>-->
-<!--      </intent-filter>-->
+      <!-- <intent-filter> -->
+      <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+      <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+      <!-- </intent-filter> -->
     </activity>
   </application>
+
+  <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
