--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,20 @@
 
   <application
     android:allowBackup="true"
-    android:name=".DominionApplication"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
+    android:name=".DominionApplication"
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
+    <activity android:name=".controller.TestActivity">
+
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN"/>
+
+        <category android:name="android.intent.category.LAUNCHER"/>
+      </intent-filter>
+    </activity>
     <activity
       android:label="@string/title_activity_action"
       android:name=".ActionActivity"
@@ -19,19 +27,19 @@
       android:label="@string/app_name"
       android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
-<!--      <intent-filter>-->
-<!--        <action android:name="android.intent.action.MAIN"/>-->
 
-<!--        <category android:name="android.intent.category.LAUNCHER"/>-->
-<!--      </intent-filter>-->
+      <!-- <intent-filter> -->
+      <!-- <action android:name="android.intent.action.MAIN"/> -->
+
+
+      <!-- <category android:name="android.intent.category.LAUNCHER"/> -->
+      <!-- </intent-filter> -->
     </activity>
     <activity android:name=".controller.LoginActivity">
-      <intent-filter>
-           <action android:name="android.intent.action.MAIN"/>
 
-           <category android:name="android.intent.category.LAUNCHER"/>
-         </intent-filter>
     </activity>
   </application>
+
+  <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
